Findbugs on server. Performance bugs.