@@ -620,7 +620,7 @@ public class JSONArray {
    * @return this.
    */
   public JSONArray put(int value) {
-    this.put(new Integer(value));
+    this.put(Integer.valueOf(value));
     return this;
   }
 
@@ -632,7 +632,7 @@ public class JSONArray {
    * @return this.
    */
   public JSONArray put(long value) {
-    this.put(new Long(value));
+    this.put(Long.valueOf(value));
     return this;
   }
 
@@ -730,7 +730,7 @@ public class JSONArray {
    *             If the index is negative.
    */
   public JSONArray put(int index, int value) throws JSONException {
-    this.put(index, new Integer(value));
+    this.put(index, Integer.valueOf(value));
     return this;
   }
 
@@ -748,7 +748,7 @@ public class JSONArray {
    *             If the index is negative.
    */
   public JSONArray put(int index, long value) throws JSONException {
-    this.put(index, new Long(value));
+    this.put(index, Long.valueOf(value));
     return this;
   }
 
