@@ -1073,7 +1073,7 @@ public class JSONObject {
    *             If the key is null.
    */
   public JSONObject put(String key, int value) throws JSONException {
-    this.put(key, new Integer(value));
+    this.put(key, Integer.valueOf(value));
     return this;
   }
 
@@ -1089,7 +1089,7 @@ public class JSONObject {
    *             If the key is null.
    */
   public JSONObject put(String key, long value) throws JSONException {
-    this.put(key, new Long(value));
+    this.put(key, Long.valueOf(value));
     return this;
   }
 
@@ -1347,7 +1347,7 @@ public class JSONObject {
             return d;
           }
         } else {
-          Long myLong = new Long(string);
+          Long myLong = Long.valueOf(string);
           if (string.equals(myLong.toString())) {
             if (myLong == myLong.intValue()) {
               return myLong.intValue();
